<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Details_FornecedorClick">

    <TextView
        android:id="@+id/text_input_fornecedor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:text="Augusto César Neves Sobral"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/text_fornecedor_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Show_Details_Telefone"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/text_fornecedor_telefone"
            android:maxLines="1"
            tools:text="Aasdasdasdad"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_celular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_telefone"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Celular"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_celular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_telefone"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_celular"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_celular"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_celular"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_email"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_email"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Endereco"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_email"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_endereco"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_endereco"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Cidade"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_endereco"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_cidade"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_cidade"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_CEP"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_cidade"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_cep"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_cep"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_UF"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_cep"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_uf"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/text_fornecedor_CPF_CNPJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_uf"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_CPF_CNPJ"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_CPF_CNPJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_uf"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_CPF_CNPJ"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_ramo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_CPF_CNPJ"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_ramo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_ramo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_CPF_CNPJ"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_ramo"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_prazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_ramo"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_prazo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_prazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_ramo"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_prazo"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_fornecedor_pagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_prazo"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_pagamento"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_pagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_prazo"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_pagamento"
            android:maxLines="1"
            tools:text="TextView"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/text_fornecedor_observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_pagamento"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Observacao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_fornecedor_observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fornecedor_pagamento"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_fornecedor_observacao"
            tools:text="TextView"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/User_Show_Details_Compras_Pendentes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

</LinearLayout>