<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Details_ClienteClick">

    <ImageView
        android:id="@+id/details_produto_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_image_sample_100x100_grey" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/text_produto_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Show_Details_Nome_Produto"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text_input_produto_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/text_produto_nome"
            android:maxLines="1"
            android:text="Aasdasdasdad"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_nome"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Codigo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_nome"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_codigo"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_codigo"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Marca"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_codigo"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_marca"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_preco_custo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_marca"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Preco_Custo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_preco_custo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_marca"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_preco_custo"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_preco_venda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_preco_custo"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Preco_Venda"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_preco_venda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_preco_custo"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_preco_venda"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_codigo_barras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_preco_venda"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Codigo_Barras"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_codigo_barras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_preco_venda"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_codigo_barras"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_codigo_barras"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Peso"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_codigo_barras"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_peso"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_tamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_peso"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Tamanho"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_tamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_peso"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_tamanho"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_estoque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_tamanho"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Estoque"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_estoque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_tamanho"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_estoque"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_produto_observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_estoque"
            android:layout_marginTop="5dp"
            android:text="@string/User_Show_Details_Observacao"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_input_produto_observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_produto_estoque"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/text_produto_observacao"
            android:text="TextView"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/User_Show_Details_Vendas_Realizadas"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/design_default_color_primary" />

</LinearLayout>